JS-7908: fix emptyWrap height

--- a/src/scss/widget/common.scss
+++ b/src/scss/widget/common.scss
@@ -87,7 +87,7 @@
 	.contentWrapper { transition: height 0.4s $easeInQuint; }
 	.innerWrap { transition: opacity 0.4s $easeInQuint; }
 
-	.emptyWrap { padding: 0px 16px; display: flex; align-items: center; justify-content: center; }
+	.emptyWrap { padding: 0px 16px; display: flex; align-items: center; justify-content: center; width: 100%; }
 	.emptyWrap {
 		.label { text-align: center; @include text-common; @include clamp2; width: 100%; color: var(--color-text-secondary); }
 		.icon.more { width: 20px; height: 20px; background-image: url('~img/icon/widget/emptyMore.svg'); }
